--- a/CG23.vcxproj
+++ b/CG23.vcxproj
@@ -130,13 +130,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Canvas2D\src\ColorDisplay.cpp" />
     <ClCompile Include="Canvas2D\src\EditablePolygon.cpp" />
     <ClCompile Include="Canvas2D\src\EventManager.cpp" />
     <ClCompile Include="Canvas2D\src\GameEvents.cpp" />
     <ClCompile Include="Canvas2D\src\gl_canvas2d.cpp" />
     <ClCompile Include="Canvas2D\src\main.cpp" />
     <ClCompile Include="Canvas2D\src\PolygonShape.cpp" />
-    <ClCompile Include="Canvas2D\src\Relogio.cpp" />
     <ClCompile Include="Canvas2D\src\DrawableDisplay.cpp" />
     <ClCompile Include="Canvas2D\src\ConcavePolygon.cpp" />
     <ClCompile Include="Canvas2D\src\ToolBar.cpp" />
@@ -146,12 +146,12 @@
     <ClInclude Include="Canvas2D\include\auxiliar.h" />
     <ClInclude Include="Canvas2D\include\Bola.h" />
     <ClInclude Include="Canvas2D\include\Botao.h" />
+    <ClInclude Include="Canvas2D\include\ColorDisplay.h" />
     <ClInclude Include="Canvas2D\include\EditablePolygon.h" />
     <ClInclude Include="Canvas2D\include\EventManager.h" />
     <ClInclude Include="Canvas2D\include\GameEvents.h" />
     <ClInclude Include="Canvas2D\include\gl_canvas2d.h" />
     <ClInclude Include="Canvas2D\include\PolygonShape.h" />
-    <ClInclude Include="Canvas2D\include\Relogio.h" />
     <ClInclude Include="Canvas2D\include\ToolBar.h" />
     <ClInclude Include="Canvas2D\include\Vector2.h" />
     <ClInclude Include="Canvas2D\include\DrawableDisplay.h" />
